# athena-rs

./: Cargo.toml  README.md  athena.config.yml
src/: main.rs
src/brokers/: amqp.rs  kafka.rs  mod.rs
src/config/: config_manager.rs  configuration.rs  mod.rs
src/dashboard/: dashboard.html  dashboard.js  mod.rs
src/server/: dispatcher.rs  mod.rs  websocket_server.rs
